B3MoveConstants floatZero() returns the wrong ValueKey https://bugs.webkit.org/show_bug.cgi?id=174040

Reviewed by Filip Pizlo.

It had a typo where the ValueKey for floatZero() produces a Double
instead of a Float.

* b3/B3MoveConstants.cpp:


Canonical link: https://commits.webkit.org/190882@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219027 268f45cc-cd09-0410-ab3c-d52691b4dbfc